--- a/index.html
+++ b/index.html
@@ -27,7 +27,24 @@
 
     </header>
 
-        <h1 class="prueba">Probando Mixin</h1>
-        <p class="texto">Probando parrafo</p>
+    <div class="video">
+        <div class="overlay">
+            <div class="contenedor contenido-video">
+                <h2>Rock & EDM Festival</h2>
+                <p>Enero 2023, Bs As, Argentina</p>
+            </div>
+
+
+        </div>
+        <video autoplay muted loop>
+            <source src="video/concierto.mp4" type="video/mp4">
+            <source src="video/concierto.ogg" type="video/ogg">
+            <source src="video/concierto.webm" type="video/webm">
+        </video>
+
+    </div>
+
+
+
 </body>
 </html>
